# saigon

./: .env-dev  .gitignore  .readthedocs.yaml  GEMINI.md  README.md  pyproject.toml
docs/: conf.py  dev_guide.md  index.rst  modules.rst  overview.rst  requirements.txt  saigon.aws.flow.rst  saigon.aws.rst  saigon.fastapi.rst  saigon.orm.rst  saigon.rest.rst  saigon.rst
src/saigon/: fflags.py  interface.py  iter.py  model.py  utils.py
src/saigon/aws/: s3.py  ssm.py
src/saigon/aws/flow/: sqs.py
src/saigon/fastapi/: handlers.py  headers.py  utils.py
src/saigon/orm/: config.py  connection.py  model.py
src/saigon/rest/: client.py  token.py
src/saigon/unleash/: __init__.py  client.py  repository.py
test/: conftest.py  pyproject.toml
test/integration/: conftest.py  test_sqs.py
test/property_based/: test_rest_client.py
test/saigon_test/: builder.py
test/saigon_test/cli/shell/: handlers.py
test/unit/: conftest.py  fixtures.py  test_aws_cognito.py  test_aws_rest.py  test_aws_s3.py  test_aws_secrets.py  test_aws_ssm.py  test_fastapi.py  test_fastapi_handlers.py  test_fflags.py  test_interface.py  test_iter.py  test_logutils.py  test_model.py  test_rest_client.py  test_timestream.py  test_utils.py
