[build-system]
requires = ["hatchling", "hatch-dependency-coversion"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "../src/saigon/__init__.py"

# Indicates to match the same version. This eliminates the
# need to explicitly set the version to this project's version
[tool.hatch.metadata.hooks.dependency-coversion]
override-versions-of = ["saigon-py"]

[project]
name = "saigon-py-test"
dynamic = ["version"]
authors = [
  { name="abastidian@gmail.com" },
]
description = "Common components to build digital backends"
requires-python = ">=3.13"
dependencies = [
    "saigon-py[backend,aws,extras,dev]",
    "psycopg~=3.2.9"
]
classifiers = [
    "Programming Language :: Python :: 3"
]

[project.urls]
"Source Code" = "https://github.com/abastidian/saigon"

# Indicate no package generation
[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.hatch.envs.default]
detached=true
path = "../.venv"




